media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: plex
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: transmission
      port: 9091
      targetPort: transmission
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
